# wordle-ai

./: pyproject.toml  readme.md
tests/: test_solver.py
wordle_ai/: __init__.py  cli.py  client.py  solver.py
wordle_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
